[tool.poetry]
name = "party-wall-flask"
version = "0.1.0"
description = ""
authors = ["15bubbles <15bubbles.15bubbles@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
flask-sqlalchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"
Flask-Login = "^0.5.0"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.24.0"
psycopg2 = "^2.8.6"
gunicorn = "^20.0.4"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
mypy = "^0.790"
isort = "^5.6.4"
autoflake = "^1.4"
pytest = "^6.1.1"
pytest-mock = "^3.3.1"
pytest-black = "^0.3.11"
pytest-pylint = "^0.17.0"
pytest-cov = "^2.10.1"
pytest-randomly = "^3.4.1"
pytest-sugar = "^0.9.4"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.mypy]

[tool.pylint.messages_control]
max-line-length = 100

[tool.pytest.ini_options]
minversion = "6.0"
required_plugins = "pytest-mock"
addopts = "--color=yes --code-highlight=yes"

[tool.coverage.run]
source = "party_wall"
omit = "party_wall/tests"

[tool.coverage.report]
skip_empty = true
fail_under = 60.0

[tool.coverage.html]
directory = "html_coverage_report"

[tool.coverage.xml]
output = "coverage_report.xml"

[tool.coverage.json]
output = "coverage_report.json"
pretty_print = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
